--- a/green.css
+++ b/green.css
@@ -2,7 +2,7 @@ body { background-color: white;
 width: 1000px;
 float:left;}
 
-#page{padding-top: 5px;
+#page{padding-top: 400px;
         margin-left:650px;
         float:left;}
 
@@ -12,14 +12,74 @@ float:left;}
   font-style:bold;
   padding-top:80px;
   margin-left:100px;
-  position:fixed;
+  position:absolute;
 }
 p {font-size: 12px;
   color: black;
   font-family:Monospace;
   padding-top:200px;
   margin-left:100px;
-  position:fixed;
+  position:absolute;
   text-align:justify;
-  width: 420px;
+   width: 420px;
 }
+//.pe-thumbs{
+  width: 600px;
+  height: 1700px;
+  position: relative;
+  background: transparent url() center center;
+  border: 5px solid #fff;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}//
+.pe-thumbs:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,102,0,0.2);
+}
+.pe-thumbs li{
+  float:left;
+  position: relative;
+}
+.pe-thumbs li a,
+.pe-thumbs li a img{
+  display: block;
+  position: relative;
+}
+.pe-thumbs li a img{
+  width:450px;
+  opacity: 0.2;
+}
+.pe-thumbs li a div.pe-description{
+  width: 600px;
+  height: 300px;
+  background: rgba(0,76,51,0.3);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: white;
+  display: none;
+  z-index: 100;
+  text-align: left;
+   
+}
+.pe-description h3{
+  padding: 10px 10px 0px 10px;
+  line-height: 20px;
+  font-family: Monospace;
+  font-size: 22px;
+  margin: 0px;
+   margin-left:30px;
+ 
+}
+.pe-description p{
+  padding: 10px 0px;
+  margin: 10px;
+  font-size: 11px;
+  font-style: italic;
+   margin-left:30px;
+  border-top: 1px solid rgba(255,255,255,0.3);
