--- a/Gallery.css
+++ b/Gallery.css
@@ -20,12 +20,12 @@ body { background: url("https://www.dropbox.com/s/3yvleqvupw6ikmt/background.jpg
    margin: 0px;
    margin-left:30px;
 }
-imageContainer {
+.imageContainer {
     margin-left:0px ;
     margin-top:0px;
     background: transparent;
-    width: 428px;
-    height: 322px;
+    width: 345px;
+    height: 163px;
     border-radius: 0px;
     overflow: hidden;
     opacity: 0.2;
