--- a/Gallery.css
+++ b/Gallery.css
@@ -1,32 +1,71 @@
-body { background: url("https://www.dropbox.com/s/3yvleqvupw6ikmt/background.jpg?dl=1") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+body {
+   margin: 0;
+}
+#background {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 1440px;
+   height: 829px;
 }
 #title {font-size: 23px;
   color: black;
   font-family:Monospace;
   font-style:bold;
-  padding-top:300px;
-  margin-left:600px;
-  position:fixed;
+  position: fixed;
+  left: 610px;
+  text-align: center;
+  top: 414.5px;
+  margin: 0;
+  line-height: 1em;
+  margin-top: -11.5px;
 }
-.pe-description h3{
-   padding: 0px 0px 0px 0px;
-   line-height: 20px;
-   font-family: Monospace;
-   font-size: 22px;
-   margin: 0px;
-   margin-left:30px;
+.imageContainerTop {
+   margin-left:0px ;
+   margin-top:0px;
+   background: transparent;
+   border-radius: 0px;
+   overflow: hidden;
+   opacity: 1;
+   width: 357px;
+   height: 203px;
+   float:left;
 }
 .imageContainer {
-    margin-left:0px ;
-    margin-top:0px;
-    background: transparent;
-    border-radius: 0px;
-    overflow: hidden;
-    opacity: 1;
+   margin-left:6px ;
+   margin-top:0px;
+   background: transparent;
+   border-radius: 0px;
+   overflow: hidden;
+   opacity: 1;
+   width: 354px;
+   height: 203px;
+   float:left;
+}
+.imageContainerMidLeft {
+   margin-left:0px ;
+   margin-top:7px;
+   background: transparent;
+   border-radius: 0px;
+   overflow: hidden;
+   opacity: 1;
+   width: 357px;
+   height: 201px;
+   float:left;
+}
+.imageContainerMidRight {
+   margin-left:726px ;
+   margin-top:7px;
+   background: transparent;
+   border-radius: 0px;
+   overflow: hidden;
+   opacity: 1;
+   width: 357px;
+   height: 201px;
+   float:left;
+}
+.view {
+   position: relative;
 }
 .view img {
    margin-left:0px ;
@@ -47,87 +86,60 @@ body { background: url("https://www.dropbox.com/s/3yvleqvupw6ikmt/background.jpg
    margin: 0px 0px 0px 0px;
    top:0;
    left:0;
+   width: 460px;
+   height: 207px;
+   padding-top:80px;
    background-color: rgba(212 , 213, 214 , 0.3);
+   -webkit-transform: scale(0);
+   -moz-transform: scale(0);
+   -o-transform: scale(0);
+   -ms-transform: scale(0);
+   transform: scale(0);
    -webkit-transition: all 0.5s linear;
    -moz-transition: all 0.5s linear;
    -o-transition: all 0.5s linear;
    -ms-transition: all 0.5s linear;
    transition: all 0.5s linear;
-   filter: alpha(opacity=0);
    opacity: 0;
    position: absolute;
+   float:left;
 }
-.view h2 {
-   font-size: 10px;
+
+.view a.info {
+   font-size: 12px;
    color: black;
    font-family:Monospace;
-   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
    background: transparent;
-   margin: 0px 0px 0px 0px;
-   -webkit-transform: scale(0);
-   -moz-transform: scale(0);
-   -o-transform: scale(0);
-   -ms-transform: scale(0);
-   transform: scale(0);
-   color: #333;
-   -webkit-transition: all 0.5s linear;
-   -moz-transition: all 0.5s linear;
-   -o-transition: all 0.5s linear;
-   -ms-transition: all 0.5s linear;
-   transition: all 0.5s linear;
-   filter: alpha(opacity=0);
-   opacity: 0;
+   margin-left: 50px;
+   text-align:justify;
 }
 .view p {
+   font-size: 10px;
+   font-family:Monospace;
+   background: transparent;
+   margin-left: 50px;
+   margin-top: 0px;
    color: #333;
-   filter: alpha(opacity=1);
-   opacity: 0;
-   -webkit-transform: scale(0);
-   -moz-transform: scale(0);
-   -o-transform: scale(0);
-   -ms-transform: scale(0);
-   transform: scale(0);
-   -webkit-transition: all 0.5s linear;
-   -moz-transition: all 0.5s linear;
-   -o-transition: all 0.5s linear;
-   -ms-transition: all 0.5s linear;
-   transition: all 0.5s linear;
-  
+   text-align:justify;
 }
-.view a.info {
-  
-   filter: alpha(opacity=0);
-   opacity: 0;
-   -webkit-transform: scale(0);
-   -moz-transform: scale(0);
-   -o-transform: scale(0);
-   -ms-transform: scale(0);
-   transform: scale(0);
-   -webkit-transition: all 0.5s linear;
-   -moz-transition: all 0.5s linear;
-   -o-transition: all 0.5s linear;
-   -ms-transition: all 0.5s linear;
-   transition: all 0.5s linear;
-}
+
 .view:hover img {
    -webkit-transform: scale(5);
    -moz-transform: scale(5);
    -o-transform: scale(5);
    -ms-transform: scale(5);
    transform: scale(5);
-   filter: alpha(opacity=0);
    opacity: 0;
 }
 .view:hover .mask {
-   opacity: 1;
-}
-.view:hover h2,.view-tenth:hover p,.view-tenth:hover a.info {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
-   filter: alpha(opacity=100);
    opacity: 1;
+}
+.view:hover h2,.view-tenth:hover p,.view-tenth:hover a.info {
+   
 }
             
