--- a/Gallery1.css
+++ b/Gallery1.css
@@ -22,7 +22,7 @@ body {
   position: absolute;
   text-align: center;
   top: 50%;
-  left: 44%;
+  left: 46%;
   margin: 0;
   line-height: 1em;
   margin-top: -11.5px;
@@ -70,6 +70,16 @@ body {
 .view img {
   width: 100%;
   height:100%;
+  -webkit-transform: scaleY(1);
+  -moz-transform: scaleY(1);
+  -o-transform: scaleY(1);
+  -ms-transform: scaleY(1);
+  transform: scaleY(1);
+  -webkit-transition: all 0.7s ease-in-out;
+  -moz-transition: all 0.7s ease-in-out;
+  -o-transition: all 0.7s ease-in-out;
+  -ms-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
   opacity: 1;
 }
 .view .mask {
@@ -80,6 +90,16 @@ body {
   height: 100%;
   padding-top:80px;
   background-color: rgba(212 , 213, 214 , 0.3);
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -o-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 0.5s linear;
+  -moz-transition: all 0.5s linear;
+  -o-transition: all 0.5s linear;
+  -ms-transition: all 0.5s linear;
+  transition: all 0.5s linear;
   opacity: 0;
   position: absolute;
   float:left;
@@ -106,9 +126,19 @@ body {
 }
 
 .view:hover img {
+  -webkit-transform: scale(5);
+  -moz-transform: scale(5);
+  -o-transform: scale(5);
+  -ms-transform: scale(5);
+  transform: scale(5);
   opacity: 0;
 }
 .view:hover .mask {
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
   opacity: 1;
 }
 .view:hover h2,.view-tenth:hover p,.view-tenth:hover a.info {
