--- a/Projection.css
+++ b/Projection.css
@@ -1,13 +1,13 @@
 #main {
     white-space: nowrap;
-    padding-top: 15%;
+    padding-top: 8%;
 }
 #main .sectionSeprate {
     display: inline-block;
     vertical-align: top;
     white-space: normal;
-    width: 475px;
-    height: 450px;
+    width: 450px;
+    height: 400px;
     margin-left: 8px;
     margin-right: 30px;
 }
@@ -15,7 +15,7 @@
     display: inline-block;
     vertical-align: top;
     white-space: normal;
-    height: 450px;
+    height: 400px;
     margin-left: 14px;
 }
 #main .sectionSeprate h1{
@@ -71,6 +71,10 @@ nav#slide-menu > ul li {
     font-family:Monospace;
     text-align: left;
 
+}
+a:-webkit-any-link{
+    color: #5e5e5e !important;
+    text-decoration:none !important;
 }
 nav#slide-menu > ul li:hover {
     color: #a5a5a5;
